// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Testing add columns and verifying the output should handle column with fixed length 5 (minLen = maxLen), but headers are longer 1`] = `
"┌──────────────┐
│ fixedWidth:5 │
├──────────────┤
│        short │
│        xxxxx │
│         this │
│  fixed-width │
│    task note │
│        needs │
│     wrapping │
└──────────────┘"
`;

exports[`Testing add columns and verifying the output should handle column with fixed length 10 (minLen = maxLen), but headers are longer 1`] = `
"┌───────────────┐
│ fixedWidth:10 │
├───────────────┤
│         short │
│    xxxxxxxxxx │
│          this │
│   fixed-width │
│     task note │
│         needs │
│      wrapping │
└───────────────┘"
`;

exports[`Testing add columns and verifying the output should handle column with fixed length 15 (minLen = maxLen) 1`] = `
"┌─────────────────┐
│   fixedWidth:15 │
├─────────────────┤
│           short │
│ xxxxxxxxxxxxxxx │
│            this │
│     fixed-width │
│ task note needs │
│        wrapping │
└─────────────────┘"
`;

exports[`Testing add columns and verifying the output should handle column with fixed length 20 (minLen = maxLen) 1`] = `
"┌──────────────────────┐
│        fixedWidth:20 │
├──────────────────────┤
│                short │
│ xxxxxxxxxxxxxxxxxxxx │
│     this fixed-width │
│      task note needs │
│             wrapping │
└──────────────────────┘"
`;

exports[`Testing add columns and verifying the output should handle column with fixed length 30 (minLen = maxLen) 1`] = `
"┌────────────────────────────────┐
│                  fixedWidth:30 │
├────────────────────────────────┤
│                          short │
│ xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
│     this fixed-width task note │
│                 needs wrapping │
└────────────────────────────────┘"
`;

exports[`Testing add columns and verifying the output should handle column with minLen 10 and maxLen 15 1`] = `
"┌─────────────────┐
│  taskNote10to15 │
├─────────────────┤
│           short │
│      xxxxxxxxxx │
│    this bounded │
│ task note needs │
│        wrapping │
└─────────────────┘"
`;

exports[`Testing add columns and verifying the output should handle column with minLen 15 and maxLen 25 1`] = `
"┌───────────────────────────┐
│            taskNote15to25 │
├───────────────────────────┤
│                     short │
│           xxxxxxxxxxxxxxx │
│    this bounded task note │
│            needs wrapping │
└───────────────────────────┘"
`;

exports[`Testing add columns and verifying the output should handle column with minLen 20 and maxLen 30 1`] = `
"┌────────────────────────────────┐
│                 taskNote20to30 │
├────────────────────────────────┤
│                          short │
│           xxxxxxxxxxxxxxxxxxxx │
│   this bounded task note needs │
│                       wrapping │
└────────────────────────────────┘"
`;

exports[`Testing add columns and verifying the output should handle column with minLen 30 and maxLen 40 1`] = `
"┌──────────────────────────────────────────┐
│                           taskNote30to40 │
├──────────────────────────────────────────┤
│                                    short │
│           xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │
│    this bounded task note needs wrapping │
└──────────────────────────────────────────┘"
`;

exports[`Testing add columns and verifying the output should handle columns with maxLen constraint 20 1`] = `
"┌──────────────────────┬───────────────────────────────────────────┬─────────────┐
│        taskNoteMax20 │                         unwrappedTaskNote │ emptyColumn │
├──────────────────────┼───────────────────────────────────────────┼─────────────┤
│       This task note │ This task note should keep its full width │             │
│   should wrap at the │                                           │             │
│     configured width │                                           │             │
└──────────────────────┴───────────────────────────────────────────┴─────────────┘"
`;

exports[`Testing add columns and verifying the output should handle columns with maxLen constraint 30 1`] = `
"┌────────────────────────────────┬───────────────────────────────────────────┬─────────────┐
│                  taskNoteMax30 │                         unwrappedTaskNote │ emptyColumn │
├────────────────────────────────┼───────────────────────────────────────────┼─────────────┤
│  This task note should wrap at │ This task note should keep its full width │             │
│           the configured width │                                           │             │
└────────────────────────────────┴───────────────────────────────────────────┴─────────────┘"
`;

exports[`Testing add columns and verifying the output should handle columns with maxLen constraint 40 1`] = `
"┌──────────────────────────────────────────┬───────────────────────────────────────────┬─────────────┐
│                            taskNoteMax40 │                         unwrappedTaskNote │ emptyColumn │
├──────────────────────────────────────────┼───────────────────────────────────────────┼─────────────┤
│        This task note should wrap at the │ This task note should keep its full width │             │
│                         configured width │                                           │             │
└──────────────────────────────────────────┴───────────────────────────────────────────┴─────────────┘"
`;

exports[`Testing add columns and verifying the output should handle columns with maxLen constraint 50 1`] = `
"┌────────────────────────────────────────────────────┬───────────────────────────────────────────┬─────────────┐
│                                      taskNoteMax50 │                         unwrappedTaskNote │ emptyColumn │
├────────────────────────────────────────────────────┼───────────────────────────────────────────┼─────────────┤
│ This task note should wrap at the configured width │ This task note should keep its full width │             │
└────────────────────────────────────────────────────┴───────────────────────────────────────────┴─────────────┘"
`;

exports[`Testing add columns and verifying the output should handle columns with maxLen constraint 60 1`] = `
"┌──────────────────────────────────────────────────────────────┬───────────────────────────────────────────┬─────────────┐
│                                                taskNoteMax60 │                         unwrappedTaskNote │ emptyColumn │
├──────────────────────────────────────────────────────────────┼───────────────────────────────────────────┼─────────────┤
│           This task note should wrap at the configured width │ This task note should keep its full width │             │
└──────────────────────────────────────────────────────────────┴───────────────────────────────────────────┴─────────────┘"
`;

exports[`Testing add columns and verifying the output should handle columns with maxLen constraint 100 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────┬───────────────────────────────────────────┬─────────────┐
│                                                                                       taskNoteMax100 │                         unwrappedTaskNote │ emptyColumn │
├──────────────────────────────────────────────────────────────────────────────────────────────────────┼───────────────────────────────────────────┼─────────────┤
│                                                   This task note should wrap at the configured width │ This task note should keep its full width │             │
└──────────────────────────────────────────────────────────────────────────────────────────────────────┴───────────────────────────────────────────┴─────────────┘"
`;

exports[`Testing add columns and verifying the output should handle columns with minLen constraint 20 1`] = `
"┌─────────────────────────────────────────────────┬────────────────────────────────────────────────────┬─────────────┐
│                        paddedTaskNote:minLen:20 │                                   unpaddedTaskNote │ emptyColumn │
├─────────────────────────────────────────────────┼────────────────────────────────────────────────────┼─────────────┤
│                 This task note should be padded │                 This task note keeps natural width │             │
│           This task note should be padded again │           This task note keeps natural width again │             │
│ This task note should be padded again and again │ This task note keeps natural width again and again │             │
└─────────────────────────────────────────────────┴────────────────────────────────────────────────────┴─────────────┘"
`;

exports[`Testing add columns and verifying the output should handle columns with minLen constraint 30 1`] = `
"┌─────────────────────────────────────────────────┬────────────────────────────────────────────────────┬─────────────┐
│                        paddedTaskNote:minLen:30 │                                   unpaddedTaskNote │ emptyColumn │
├─────────────────────────────────────────────────┼────────────────────────────────────────────────────┼─────────────┤
│                 This task note should be padded │                 This task note keeps natural width │             │
│           This task note should be padded again │           This task note keeps natural width again │             │
│ This task note should be padded again and again │ This task note keeps natural width again and again │             │
└─────────────────────────────────────────────────┴────────────────────────────────────────────────────┴─────────────┘"
`;

exports[`Testing add columns and verifying the output should handle columns with minLen constraint 40 1`] = `
"┌─────────────────────────────────────────────────┬────────────────────────────────────────────────────┬─────────────┐
│                        paddedTaskNote:minLen:40 │                                   unpaddedTaskNote │ emptyColumn │
├─────────────────────────────────────────────────┼────────────────────────────────────────────────────┼─────────────┤
│                 This task note should be padded │                 This task note keeps natural width │             │
│           This task note should be padded again │           This task note keeps natural width again │             │
│ This task note should be padded again and again │ This task note keeps natural width again and again │             │
└─────────────────────────────────────────────────┴────────────────────────────────────────────────────┴─────────────┘"
`;

exports[`Testing add columns and verifying the output should handle columns with minLen constraint 50 1`] = `
"┌────────────────────────────────────────────────────┬────────────────────────────────────────────────────┬─────────────┐
│                           paddedTaskNote:minLen:50 │                                   unpaddedTaskNote │ emptyColumn │
├────────────────────────────────────────────────────┼────────────────────────────────────────────────────┼─────────────┤
│                    This task note should be padded │                 This task note keeps natural width │             │
│              This task note should be padded again │           This task note keeps natural width again │             │
│    This task note should be padded again and again │ This task note keeps natural width again and again │             │
└────────────────────────────────────────────────────┴────────────────────────────────────────────────────┴─────────────┘"
`;

exports[`Testing add columns and verifying the output should handle columns with minLen constraint 60 1`] = `
"┌──────────────────────────────────────────────────────────────┬────────────────────────────────────────────────────┬─────────────┐
│                                     paddedTaskNote:minLen:60 │                                   unpaddedTaskNote │ emptyColumn │
├──────────────────────────────────────────────────────────────┼────────────────────────────────────────────────────┼─────────────┤
│                              This task note should be padded │                 This task note keeps natural width │             │
│                        This task note should be padded again │           This task note keeps natural width again │             │
│              This task note should be padded again and again │ This task note keeps natural width again and again │             │
└──────────────────────────────────────────────────────────────┴────────────────────────────────────────────────────┴─────────────┘"
`;

exports[`Testing add columns and verifying the output should handle columns with minLen constraint 100 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────┬────────────────────────────────────────────────────┬─────────────┐
│                                                                            paddedTaskNote:minLen:100 │                                   unpaddedTaskNote │ emptyColumn │
├──────────────────────────────────────────────────────────────────────────────────────────────────────┼────────────────────────────────────────────────────┼─────────────┤
│                                                                      This task note should be padded │                 This task note keeps natural width │             │
│                                                                This task note should be padded again │           This task note keeps natural width again │             │
│                                                      This task note should be padded again and again │ This task note keeps natural width again and again │             │
└──────────────────────────────────────────────────────────────────────────────────────────────────────┴────────────────────────────────────────────────────┴─────────────┘"
`;

exports[`Testing add columns and verifying the output should make sure each column is what its expected to be 1`] = `
"┌──────────────┬─────────────┐
│ Review State │ reviewOwner │
├──────────────┼─────────────┤
│   Approved   │        Dana │
└──────────────┴─────────────┘"
`;

exports[`Testing add columns and verifying the output should verify addColumn maintains column order 1`] = `
"┌──────────┬───────────┬────────────┐
│ stepName │ stepOwner │ stepStatus │
├──────────┼───────────┼────────────┤
│   Design │      Mira │      Ready │
└──────────┴───────────┴────────────┘"
`;

exports[`Testing add columns and verifying the output should verify addColumn with custom column properties 1`] = `
"┌─────────┬──────────┐
│    task │ Duration │
├─────────┼──────────┤
│ Prepare │          │
│   Build │       45 │
└─────────┴──────────┘"
`;

exports[`Testing add columns and verifying the output should verify addColumn with multiple data types 1`] = `
"┌───────────────┬───────────────┐
│      rowLabel │ renderedValue │
├───────────────┼───────────────┤
│      baseline │               │
│    number row │           123 │
│   boolean row │          true │
│      null row │               │
│ undefined row │               │
└───────────────┴───────────────┘"
`;

exports[`Testing add columns and verifying the output should verify that addColumn adds a new column while preserving existing data 1`] = `
"┌─────────┬───────┬────────┐
│    task │ owner │ status │
├─────────┼───────┼────────┤
│    Docs │   Ana │        │
│     API │   Ben │        │
│ Release │   Cam │   Done │
└─────────┴───────┴────────┘"
`;
